--- a/services.css
+++ b/services.css
@@ -7,6 +7,11 @@ body {
     background-size: cover;
     color: white;
 }
+@media (min-width: 768px) {
+    main {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
 ion-icon{
     width: 20px;
     height: 20px;
